[package]
name = "werdol"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3 # TODO back to 3 when rpath shit sorted

[dependencies]
bevy = { version = "0.9.1", features = [ "wayland" ] }
derive_more = "0.99"
lazy_static = ">=1.4,<1.5"
rand = ">0.8.0,<1.0.0"